=== Changelog ===
* Last revised January 17, 2015
The Pinup Meets Grunge Copyright can be found at the end of this file.

== Version 2.2 ==
= Code =
* General Code reformatting to better meet WordPress Coding Standards
* Added support for WordPress 4.1 `add_theme_support( 'title-tag' )`

= CSS =
* Minor corrections in the stylesheet

= Miscellaneous =
* Updated Copyright dates
* Updated tags used in stylesheet header

/** ------------------------------------------------------------------------- */
== Version 2.1 ==
* Although the theme is functional it may not be fully supported going forward.

= Code =
* Code refactoring / formatting and block termination comments added

/** ------------------------------------------------------------------------- */
== Version 2.0 ==
Date: January 19, 2013
* Full re-write/over-write to use NoNa theme code (as the original source for NoNa was Pinup Meets Grunge)

/** ------------------------------------------------------------------------- */
= Version 1.1.1 =
* as of Dec 26, 2009
* moved theme version display to functions.php

= Version 1.1 =
* added clearing div to the end of the_Loop
* added wp_link_pages() function
* re-coded next and previous navigation links

= Version 1.0.6 =
* released at http://buynowshop.com/themes/pinup-meets-grunge/

= Version 1.0.4 =
* re-coded footer.php to address fopen() issues
* updated theme URL (to its own page)
* corrected typo in Theme Description

= Version 1.0.2 =
* amended GPL release statement to include CSS, XHTML, and design (as referenced in the "default" theme's GPL release statement).
* set all text to a default of black (hex: #000000).

= Version 1.0.1 =
* correction to theme description
* added additional secondary screenshots (showing some color varieties)

= Version 1.0 =
* Initial Release

/** ------------------------------------------------------------------------- */
/**
 * Copyright 2009-2015  Edward Caissie  (email : edward.caissie@gmail.com)
 *