@@ -6,6 +6,7 @@ The Pinup Meets Grunge Copyright can be found at the end of this file.
 = Code =
 * General Code reformatting to better meet WordPress Coding Standards
 * Added support for WordPress 4.1 `add_theme_support( 'title-tag' )`
+* Added `PMG_HOME_URL` CONSTANT pointing to BuyNowShop.com
 
 = CSS =
 * Minor corrections in the stylesheet
